--- a/Demo_UWP_SkiRunRater/Demo_UWP_SkiRunRater.csproj
+++ b/Demo_UWP_SkiRunRater/Demo_UWP_SkiRunRater.csproj
@@ -109,6 +109,10 @@
     <None Include="Demo_UWP_SkiRunRater_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\ski_run_1.jpg" />
+    <Content Include="Assets\ski_run_2.jpg" />
+    <Content Include="Assets\ski_run_3.jpg" />
+    <Content Include="Assets\ski_run_4.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
